--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
 
     <!-- Talwind CSS CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 
     <!-- HTMX Core -->
     <script
